--- a/Parker_PA_03.ipynb
+++ b/Parker_PA_03.ipynb
@@ -26,11 +26,7 @@
         "- Use the classification tree to make predictions for the test data.\n",
         "- Create a confusion matrix.\n",
         "\n",
-        "Ex: If the input feature displacement is used instead of cylinders, the output should be:\n",
-        "\n",
-        "![Screenshot 2024-07-12 at 10.44.45 AM.png](attachment:0ceabe3c-5968-4e78-853d-f998808be339.png)\n",
-        "\n",
-        "![Screenshot 2024-07-12 at 10.46.40 AM.png](attachment:43c8b9cd-7eb2-4f45-ac44-38b2597efe17.png)"
+        "Ex: If the input feature displacement is used instead of cylinders, the output should be:"
       ]
     },
     {
